Fixed header position on Firefox

--- a/src/Components/Section/Section.css
+++ b/src/Components/Section/Section.css
@@ -19,5 +19,6 @@
     .text-fit div {
         position: fixed;
         left: 0;
+        top: 5vh;
     }
 }
